log.txt
/home/egos/E.G.Os-Kernel/LUCOA-kernel_xiaomi_sm6225/arch/arm64/kernel/signal.c:752:14: error: use of undeclared identifier 'vdso_offset_sigtramp'
  752 |                 sigtramp = VDSO_SYMBOL(current->mm->context.vdso, sigtramp);
      |                            ^
/home/egos/E.G.Os-Kernel/LUCOA-kernel_xiaomi_sm6225/arch/arm64/include/asm/vdso.h:37:12: note: expanded from macro 'VDSO_SYMBOL'
   37 |         (void *)((vdso_offset_##name & ~1UL) - VDSO_LBASE + \
      |                   ^
<scratch space>:202:1: note: expanded from here
  202 | vdso_offset_sigtramp
      | ^
/home/egos/E.G.Os-Kernel/LUCOA-kernel_xiaomi_sm6225/arch/arm64/kernel/signal.c:752:12: error: assigning to '__sigrestore_t' (aka 'void (*)(void)') from incompatible type 'void'
  752 |                 sigtramp = VDSO_SYMBOL(current->mm->context.vdso, sigtramp);
      |                          ^ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
2 errors generated.
make[2]: *** [/home/egos/E.G.Os-Kernel/LUCOA-kernel_xiaomi_sm6225/scripts/Makefile.build:338: arch/arm64/kernel/signal.o] Error 1
make[1]: *** [/home/egos/E.G.Os-Kernel/LUCOA-kernel_xiaomi_sm6225/Makefile:1177: arch/arm64/kernel] Error 2
make[1]: *** Waiting for unfinished jobs....
make: *** [Makefile:154: sub-make] Error 2
